# api/index.ts
@@ -9,10 +9,13 @@ export * from './enums/trader-status.enum';
 export * from './interfaces/strategy/strategy.interface';
 export * from './interfaces/strategy/strategy-query.interface';
 
+export * from './interfaces/instrument/instrument.interface';
+
 export * from './interfaces/user/user.interface';
 
 export * from './interfaces/trader/trader-query.interface';
 export * from './interfaces/trader/trader-event-payload.interface';
+export * from './interfaces/candle/create-candle-request.interface';
 export * from './interfaces/event-response.interface';
 
 
@@ -27,17 +30,24 @@ export * from './proxies/shared/proxy-base.service';
 export * from './proxies/shared/default-api-key.enum';
 
 export * from './proxies/strategy-proxy.service';
+export * from './proxies/instrument-proxy.service';
 export * from './proxies/trader-m5-proxy.service';
+export * from './proxies/candle-proxy.service';
 
 
 export * from './helpers/strategies/google';
 export * from './helpers/jwt-token.service';
 export * from './helpers/swagger-config';
+export * from './helpers/startup.service';
+
 
 export * from './services/strategy.service';
 export * from './services/user.service';
 export * from './services/trader.service';
 
 export * from './controllers/strategy.controller';
+export * from './controllers/instrument.controller';
+export * from './controllers/trader-m5.controller';
 export * from './controllers/user.controller';
+export * from './controllers/candle.controller';
 
